# drive-backend

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  pytest.ini
src/drive/: settings.py  urls.py
src/files/: admin.py  models.py  serializers.py  urls.py  views.py
src/files/fixtures/: files.json
src/files/migrations/: 0001_initial.py  0002_alter_file_name_alter_folder_name.py  0003_alter_folder_name.py  0004_alter_file_name.py
src/files/tests/: conftest.py  factories.py  test_e2e.py  test_models.py  test_serializers.py  tests.py
